plang/testing/logs/false-incorrect/26/program26.p.p
rF9J zirpO (O) (L0).

dTuAv (MZeq) (wEcu Nz u).

v O (Xadmz) (Nk) :- v M6Sp (nzUy (Jw7Tl) cGT) ObM R.

omKPl.

ck mEC ijZuO (qjN S Pl).

mu52 YJmX8.

oU Zs0AV ix2e pU tc :- ((v3, c XR4 ioCU zpm o; oo g x2B2Q DJf, e o (Rd) (vV (DN)) (cg1 (G) (nq6Pi Gf (Hv4nf))))), ((wucm Aqyw (ce V7cF NO) (e ZRf (YPwM2))), zneS5 G3; cevUy (aXM RA2a v m) apk1k Rt H), ((t (H9lG7), c1kR (BUx) Yxmo6 NkVE)).

? ((qMzk; gOFy; tqP; e (hpW (DX)) (Uu)); xpLJ (B) dOoD hfUpH; (zVjQm sDEek TR C (W); bT GuHjk (N4) e7 vwcp)).



